Allow user interface to select from 802.11b, g or n

--- a/src/www/style.css
+++ b/src/www/style.css
@@ -142,6 +142,7 @@ table.settings label,
 table.password td,
 table.password label {
     vertical-align: middle;
+    font-size: 0.8em;
 }
 
 .modal {
